fix color-picker width on mobile 2

--- a/src/styles/_color-picker.scss
+++ b/src/styles/_color-picker.scss
@@ -268,10 +268,3 @@
     }
   }
 }
-@media all and (max-width: 375px) {
-  .color-picker{
-    .popover{
-
-    }
-  }
-}
